bare and m2