@@ -26,9 +26,14 @@ repositories {
     mavenCentral()
 }
 
+tasks.withType(Test) {
+    useJUnitPlatform()
+    jvmArgs '--enable-preview'
+}
+
 dependencies {
 	compile 'org.apache.tika:tika-core:1.24.1'
-	 
+
     testImplementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.28'
     testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
@@ -36,5 +41,8 @@ dependencies {
     testImplementation 'com.google.guava:guava:28.2-jre'
 
     // Use JUnit test framework
-    testImplementation 'junit:junit:4.13.1'
+    testCompile 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+    testCompile 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+    testCompile 'org.hamcrest:hamcrest-all:1.3'
+
 }
